fix close icon on mobile

--- a/assets/sass/theme/_responsive.scss
+++ b/assets/sass/theme/_responsive.scss
@@ -428,7 +428,7 @@
 		&.single-recipes {
 			-webkit-overflow-scrolling: touch;
 			overflow-scrolling: touch;
-			.fa-close {
+			.close {
 				top: 10px;
 				right: 50%;
 				font-size: 24pt;
